<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.sebastiaanschool.contact.app.gui.ContactFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_bottom_last"
        android:layout_marginLeft="@dimen/card_margin_horizontal"
        android:layout_marginRight="@dimen/card_margin_horizontal"
        android:layout_marginTop="@dimen/card_margin_top_first"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="2dp"
        app:cardElevation="1dp"
        app:contentPadding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/contact_phone"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:drawableLeft="@drawable/ic_contact_phone_32dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_contact_phone_32dp"
                android:drawableTint="@color/sebastiaan_blue"
                android:text="@string/contact__call" />


            <TextView
                android:id="@+id/contact_twitter"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:layout_marginTop="@dimen/card_margin_top_next"
                android:drawableLeft="@drawable/ic_twitter_blue"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_twitter_blue"
                android:text="@string/contact__twitter" />

            <TextView
                android:id="@+id/contact_yurls"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:layout_marginTop="@dimen/card_margin_top_next"
                android:drawableLeft="@drawable/ic_yurls_blue"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_yurls_blue"
                android:text="@string/contact__yurls" />

            <TextView
                android:id="@+id/contact_homepage"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:layout_marginTop="@dimen/card_margin_top_next"
                android:drawableLeft="@drawable/ic_contact_homepage_32dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_contact_homepage_32dp"
                android:drawableTint="@color/sebastiaan_blue"
                android:text="@string/contact__homepage" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
